# ardent

./: .gitignore  Install  LICENCE  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
ardent/: WorkingExample.py  __init__.py  ardent.py  ardent_dvp.py  ardent_functions.py  hands-on_tutorial.ipynb  system_parameters.txt
ardent_pip/: Information.txt  ardent.py  ardent_functions.py  ardent_functions_v2.py  ardent_v2.py  example.py
