[project]
name = "ardent"
description = "A package for computing dynamical exoplanet detection limits from radial velocity timeseries."
readme = "README.md"
authors = [
    { name = "Manu Stalport", email = "manu.stalport@uliege.be" }
]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "numpy",
    "matplotlib",
    "rebound=4.4.3",
    "reboundx=4.3.0",
    "joblib",
    "tqdm", 
    "PyAstronomy"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/manustalport/ardent"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "ardent/_version.py"

[tool.setuptools]
zip_safe = false

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "ardent/version.py"
